--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Hello from future developer Noaman Saleem</h1>
+    <h1>Hello from future developer <s>Talha</s> Noaman Saleem</h1>
 </body>
 
 </html>
